// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align defaults to left 1`] = `
<td
  class="wuiTableHeaderCell"
  role="columnheader"
  scope="col"
>
  <div
    class="wuiTableCellContent"
  >
    <span
      class="wuiTableCellContent__text"
    />
  </div>
</td>
`;

exports[`align renders center when specified 1`] = `
<td
  class="wuiTableHeaderCell"
  role="columnheader"
  scope="col"
>
  <div
    class="wuiTableCellContent wuiTableCellContent--alignCenter"
  >
    <span
      class="wuiTableCellContent__text"
    />
  </div>
</td>
`;

exports[`align renders right when specified 1`] = `
<td
  class="wuiTableHeaderCell"
  role="columnheader"
  scope="col"
>
  <div
    class="wuiTableCellContent wuiTableCellContent--alignRight"
  >
    <span
      class="wuiTableCellContent__text"
    />
  </div>
</td>
`;

exports[`renders WuiTableHeaderCell 1`] = `
<th
  aria-label="aria-label"
  class="wuiTableHeaderCell testClass1 testClass2"
  data-test-subj="test subject string"
  role="columnheader"
  scope="col"
>
  <div
    class="wuiTableCellContent testClass1 testClass2"
  >
    <span
      class="wuiTableCellContent__text"
    >
      children
    </span>
  </div>
</th>
`;

exports[`renders td when children is null/undefined 1`] = `
<td
  aria-label="aria-label"
  class="wuiTableHeaderCell testClass1 testClass2"
  data-test-subj="test subject string"
  role="columnheader"
  scope="col"
>
  <div
    class="wuiTableCellContent testClass1 testClass2"
  >
    <span
      class="wuiTableCellContent__text"
    />
  </div>
</td>
`;

exports[`width and style accepts style attribute 1`] = `
<th
  class="wuiTableHeaderCell"
  role="columnheader"
  scope="col"
  style="width:20%"
>
  <div
    class="wuiTableCellContent"
  >
    <span
      class="wuiTableCellContent__text"
    >
      Test
    </span>
  </div>
</th>
`;

exports[`width and style accepts width attribute 1`] = `
<th
  class="wuiTableHeaderCell"
  role="columnheader"
  scope="col"
  style="width:10%"
>
  <div
    class="wuiTableCellContent"
  >
    <span
      class="wuiTableCellContent__text"
    >
      Test
    </span>
  </div>
</th>
`;

exports[`width and style accepts width attribute as number 1`] = `
<th
  class="wuiTableHeaderCell"
  role="columnheader"
  scope="col"
  style="width:100px"
>
  <div
    class="wuiTableCellContent"
  >
    <span
      class="wuiTableCellContent__text"
    >
      Test
    </span>
  </div>
</th>
`;

exports[`width and style resolves style and width attribute 1`] = `
<th
  class="wuiTableHeaderCell"
  role="columnheader"
  scope="col"
  style="width:10%"
>
  <div
    class="wuiTableCellContent"
  >
    <span
      class="wuiTableCellContent__text"
    >
      Test
    </span>
  </div>
</th>
`;
